[metadata]
name = image_enhancement
version = attr: image_enhancement.__version__
url = https://github.com/aYukiYoshida/Low-light-Image-Enhancement
author = Yuki Yoshida
author_email = yuki.yoshida@access-company.com
license_file = LICENSE
description = low light image enhancement
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    scipy
    opencv-python
    tqdm
